style.css
/* ----------------------------GENERAL SETTINGS----------------------- */
* {
  font-family: 'Lato', sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  max-width: 100%;
  margin: 0;
}

.desktop {
  display: none;
}

.mobile {
  display: block;
}

@media (min-width: 768px) {
  .mobile {
    display: none !important;
  }
}

@media (max-width: 767px) {
  .desktop {
    display: none !important;
  }

  .mobile {
    display: block !important;
  }
}

a {
  text-decoration: none;
}

li {
  list-style-type: none;
}

/* ---------------------------END---------------------------------- */

/* -------------------------TOOLBAR------------------------------------ */
#toolbar {
  width: 100vw;
  max-height: 22vh;
  display: flex;
  flex-direction: column;
}

.top-bar-wrapper {
  background-color: #272a31;
  width: 100%;
  max-height: 7vh;
  min-height: 24px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.top-bar {
  display: flex;
  max-width: 30vw;
  margin-right: 10vw;
  align-items: center;
  height: 50px;
}

.program-element p {
  color: #fff;
}

.past-wrapper p {
  text-align: center;
  color: #272a31;
  letter-spacing: 0.5px;
  line-height: 30px;
  font-size: 22px;
}

.NYO-2021 p,
.NYO-2020 p {
  color: #fff;
  font-weight: 700;
  font-size: 20px;
}

.speaker-button p {
  font-weight: 500;
  font-size: 14px;
  margin-right: 2vw;
  width: fit-content;
}

.speaker-button2 p {
  font-weight: 500;
  font-size: 14px;
  margin-right: 2vw;
}

.top-bar li p {
  color: #fff;
  display: flex;
  align-items: center;
}

.top-bar-option {
  margin-left: 2vw;
}

.bot-bar-wrapper {
  background-color: #fff;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-height: 15vh;
  min-height: 92px;
}

.bot-bar {
  display: flex;
  margin-right: 15vw;
}

.bot-bar-logo {
  margin-left: 15vw;
}

.bot-bar-option {
  margin-right: 2vw;
  margin-left: 2vw;
  display: flex;
  align-items: center;
}

.bot-bar-option a {
  color: #272a31;
  font-size: 16px;
}

.bot-bar-campaign a {
  color: #ec5242;
  font-size: 16px;
}

.bot-bar-option a:hover {
  color: #ec5242;
}

.bot-bar-campaign {
  margin-left: 3.5vw;
  border-color: #ec5242;
  border-style: solid;
  padding: 5px;
  display: flex;
  align-items: center;
}

/* ---------------------------------END---------------------------------- */

/* -----------------------Main Home--------------------------------- */
#home {
  background: url(images/mobile-bg.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

@media (min-width: 768px) {
  #home {
    display: flex;
    justify-content: center;
  }
}

.home-wrapper {
  padding: 12px;
  display: flex;
  max-width: 100vw;
  flex-direction: column;
}

@media (min-width: 768px) {
  .home-wrapper {
    width: 50vw;
  }
}

.hamburguer {
  width: 36px;
  height: 36px;
  display: flex;
  gap: 7px;
  margin-bottom: 25px;
}

.bar {
  height: 8px;
  width: 100%;
  background-color: #272a31;
  margin: 6px 0;
}

.main-greeting {
  margin-top: 10vh;
  font-size: 20px;
  color: #ec5242;
}

.main-title {
  margin-top: 20px;
  font-size: 26px;
  background: url(images/text-bg.jpg);
  color: transparent;
  background-size: cover;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.main-description {
  margin-top: 5vh;
  font-size: 18px;
  border-color: #fff;
  border-width: 4px;
  border-style: solid;
  padding: 6px;
  background-color: #f4f5f7;
  letter-spacing: 0.5px;
}

.main-info {
  margin-top: 5vh;
  font-size: 18px;
  letter-spacing: 0.5px;
}

.second-info {
  margin-top: 3px;
  font-size: 14px;
  margin-bottom: 100px;
  letter-spacing: 0.5px;
}

@media (min-width: 768px) {
  .main-greeting {
    font-size: 26px;
    letter-spacing: 0.5px;
  }

  .main-title {
    font-size: 40px;
    letter-spacing: 0.5px;
    margin-top: 30px;
  }

  .main-description {
    letter-spacing: 0.5px;
    font-size: 22px;
  }

  .main-info {
    font-size: 24px;
    letter-spacing: 0.5px;
  }

  .second-info {
    font-size: 20px;
    letter-spacing: 0.5px;
  }
}

/* ----------------------------END---------------------------------- */

/* ---------------------------MAIN PROGRAM-------------------------- */
#program {
  background: url(images/pattern.png);
  background-color: #272a31;
  background-repeat: repeat;
  width: 100vw;
  display: flex;
  justify-content: center;
  margin: auto;
}

.program-wrapper {
  width: 90vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  margin-top: 75px;
  margin-bottom: 75px;
}

.program-title {
  color: #fff;
}

@media (min-width: 768px) {
  .program-title {
    letter-spacing: 0.5px;
    font-size: 32px;
  }
}

.program-line {
  height: 2px;
  width: 40px;
  background-color: #ec5242;
  margin-top: 15px;
  margin-bottom: 20px;
}

.program-list {
  display: flex;
  flex-direction: column;
}

@media (min-width: 768px) {
  .program-list {
    flex-direction: row;
  }
}

.program-element {
  display: flex;
  align-items: center;
  background-color: #ffffff26;
  margin-bottom: 20px;
  padding: 15px;
}

.program-element:hover {
  border-width: 1px;
  border-style: solid;
  border-color: #fff;
}

@media (min-width: 768px) {
  .program-element {
    flex-direction: column;
    gap: 20px;
    margin-right: 5px;
    width: 15vw;
  }
}

.program-element img {
  width: 48px;
  margin-right: 5vw;
}

.program-element h3 {
  color: #ec5242;
  margin-right: 5vw;
}

@media (min-width: 768px) {
  .program-element img,
  .program-element h3,
  .program-element p {
    margin-right: 0;
    text-align: center;
  }
}

.program-button {
  width: fit-content;
  padding: 20px;
  min-height: 50px;
  background-color: #ec5242;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
}

.program-button:hover {
  background-color: #e4250f;
}
/* ... */

